package oop4;

public class Horse extends StableMember{

 // 0 = Anfänger, 1 = gute Reiter, 2 = sehr gute Reiter
    public Horse(String name, int characteristic){
        super(name, characteristic);  
    }

  
}
